fixed timer mode change bug (updated timer accordingly), fixed layout issues and divided the App.scss file to components, and added the save of list items in localStorage

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Red+Hat+Display:ital,wght@0,300;0,600;1,300&display=swap');
 @import '../scss/checkbox.scss';
 @import '../scss/welcome.scss';
+@import '../scss/timer.scss';
+@import '../scss/updates.scss';
+@import '../scss/todoList.scss';
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 
-$themecolor1: #a3b3d6;
-$themecolor2: #be8993;
+$themecolor1: #7394da;
+$themecolor2: #bfebe1;
 
 h4, h2, h1, p{
     font-family: 'Red Hat Display', sans-serif;
@@ -44,7 +47,6 @@ footer{
   text-align: center;
   font-weight: lighter;
   font-size:medium;
-  height: 4%;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.139);
 
   .main-footer{
@@ -56,7 +58,7 @@ footer{
 .ListAndTimer{
     display: grid;
     grid-template-columns: 35% 65%;
-    grid-template-rows: minmax(auto, 7%) 1fr 0.4fr 5%;
+    grid-template-rows: minmax(auto, 8%) 1fr 0.4fr 6%;
     font-family: 'Red Hat Display', sans-serif;
     margin:0 1%;
     width: 97%;
@@ -79,82 +81,6 @@ footer{
   grid-area: TodoPomodoroHeader;
   height: fit-content;
 
-}
-
-.pomodoro-timer{
-  grid-area: pomodoro-timer;
-  min-width: min-content;
-  min-height: min-content;
-  display: flex;
-  flex-direction: column;
-  button{
-    margin: 1%;
-  }
-    
-}
-
-
-.timer{
-    padding: 14%;
-    margin: 0% 5% 3% 5%;
-    min-width: min-content;
-    min-height: min-content;
-    max-width: 80%;
-
-    text-align: center;
-    background: rgb(163, 163, 163);
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.308) 0%, rgba(1, 0, 0, 0.148) 100%);
-    border-radius: 5%;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-
-}
-
-.updates{
-  display: flex;
-  grid-area: updates;
-  flex-direction: row-reverse;
-  margin: 0% 10% 2% 10%;
-
-  .CompletionForcast{
-    padding:1% 3%;
-    height: fit-content;
-    font-size:smaller;
-    font-weight: bold;
-    text-align: center;
-    
-    background-color: rgba(255, 255, 255, 0.212);
-    border-radius: 30px;
-    box-shadow: 0 3px 5px rgb(0 0 0 / 0.2);
-
-
-    h4{
-      margin-bottom: 0;
-    }
-  }
-
-  .ProgressBarP{
-
-    padding:1%;
-    width: 50%;
-    margin:0% 7% ;
-    align-self: top;
-    
-    
-    h6{
-      font-weight: bold;
-    }
-  
-  }
-  .progress{
-    background-color: rgba(255, 255, 255, 0.161) !important;
-    height: 25px !important;
-    box-shadow: 0 3px 5px rgb(0 0 0 / 0.2);
-
-  }
-  .progress-bar{
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.059) 0%, rgba(0,0,0,0.16867997198879547) 96%)!important;
-    
-  }
 }
 
 .TodoPomodoroList{
@@ -195,58 +121,7 @@ footer{
   color: white;
   text-decoration: none;
 }
-.TodoPomodoroList::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
-}
-.Todo-li{
-  list-style: none;
-  border-bottom: 1px solid rgb(184, 184, 184);
-  width:90%;
-  max-width: 90%;
 
-
-  input[type=text]{
-    width:100%;
-    border:0;
-
-  }
-
-  label{
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-  }
-
-  .checkbox-wrapper-11{
-    display: flex;
-    
-  }
-  .deleteTodo{
-    border: 0;
-    background-color: white;
-    font-weight: bold;
-    font-size: larger;
-    color: grey;
-    position:absolute;
-    right:0;
-    
-  }
-
-  .deleteTodo:hover{
-    color: black;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    padding: 0 1%;
-    border-radius: 50px;
-  }
-
-}
-
-
-.todos-title{
-  text-align: center;
-  padding: 3%;
-  text-decoration-style: wavy; 
-
-}
 
 footer{
   grid-area: footer;
@@ -264,11 +139,9 @@ footer{
     // width: 95%;
   }
   
-  .updates{
-    margin-top: 10%;
-  }
   .ListAndTimer{
     margin-top: 0px;
+
   }
 
   .TodoPomodoroHeader{
